<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WooYun</string>
    <string name="menu_about">关于</string>
    <string name="domain_url">http://api.wooyun.org/domain/%1$s/limit/10</string>
    <string name="item_title">&lt;b>&lt;/b>%1$s</string>
    <string name="item_date">&lt;b>提交日期：&lt;/b>%1$s</string>
    <string name="item_link">&lt;b>详细信息：&lt;/b>%1$s</string>
    <string name="item_status">&lt;b>漏洞状态：&lt;/b>%1$s</string>
    <string name="item_harmlevel">&lt;b>危害等级：%1$s&lt;/b></string>
    <string name="item_corp_harmlevel">&lt;b>厂商回应：%1$s&lt;/b></string>
    <string name="item_corp_rank">&lt;b>漏洞Rank：%1$s&lt;/b></string>
    <string name="item_comment">&lt;b>评论数量：&lt;/b>&lt;u>%1$s&lt;/u></string>
    <string name="menu_new_submit">最新提交</string>
    <string name="menu_new_public">最新公开</string>
    <string name="menu_new_confirm">最新确认</string>
    <string name="menu_new_unclaim">等待认领</string>

</resources>