<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+menu/new_submit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_new_submit"/>
    <item
        android:id="@+menu/new_public"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_new_public"/>
    <item
        android:id="@+menu/new_confirm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_new_confirm"/>
    <item
        android:id="@+menu/new_unclaim"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_new_unclaim"/>
    <item
        android:id="@+menu/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>